fix: bookmark件数をAPIで返すように修正
